Fixed problem on tp Added support for sit plugins